--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,19 @@
     "version": "0.2.0",
     "configurations": [
       {
+        "name": "Node Inspector",
+        "type": "node",
+        "request": "launch",
+        "args": ["${workspaceRoot}/src/index.ts"],
+        "runtimeArgs": ["-r", "ts-node/register"],
+        "cwd": "${workspaceRoot}",
+        "protocol": "inspector",
+        "internalConsoleOptions": "openOnSessionStart",
+        "env": {
+          "TS_NODE_IGNORE": "false"
+        }
+      },
+      {
         "type": "node",
         "request": "launch",
         "name": "Jest All",
