--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DDNS without Netsons API, because Netsons doesn't have it...",
   "main": "index.ts",
   "scripts": {
+    "serve": "ts-node src/index.ts",
     "start": "node dist/index.js",
     "build": "parcel build src/index.ts --target node --bundle-node-modules",
     "test": "jest"
@@ -31,6 +32,7 @@
     "parcel-bundler": "^1.12.3",
     "ts-jest": "^24.0.2",
     "ts-mockito": "^2.3.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.5.2"
   }
 }
